feat: add compose gui migration