@@ -3,12 +3,13 @@ import java.nio.file.StandardCopyOption
 import java.util.Properties
 import kotlin.io.path.createTempDirectory
 import kotlin.io.path.createTempFile
+import org.gradle.api.tasks.JavaExec
 import org.jetbrains.kotlin.konan.file.unzipTo
 
 plugins {
     kotlin("jvm")
     id("org.openjfx.javafxplugin") version "0.1.0"
-    id("dev.hydraulic.conveyor") version "1.13"
+    id("dev.hydraulic.conveyor") version "2.0"
     alias(libs.plugins.ktlint)
     application
 }
@@ -124,6 +125,10 @@ tasks {
     test {
         useJUnitPlatform()
     }
+
+    withType<JavaExec>().configureEach {
+        jvmArgs("--enable-native-access=javafx.graphics")
+    }
 }
 
 kotlin {
@@ -141,7 +146,7 @@ ktlint {
 }
 
 javafx {
-    version = "21"
+    version = "25"
     modules("javafx.controls", "javafx.fxml")
 }
 
